<resources>
    <string name="app_name">LuckyEgg</string>
    <string name="title_activity_maps">Map</string>
    <string name="banner_ad_unit_id">ca-app-pub-1196397376755547/6870727510</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="user_login_form_user">User name or email </string>
    <string name="user_login_form_password">Password </string>
    <string name="user_login_form_remember">Remember me</string>
    <string name="user_login_form_iforgot">Forgot password ?</string>
    <string name="user_login_form_btn_login"> LOGIN! </string>
    <string name="user_login_form_success">You have logined successfuly!</string>
    <string name="user_sign_up_form_name">Name</string>
    <string name="user_sign_up_form_surname">Surname</string>
    <string name="user_sign_up_form_phone">Phone number ex: +90xxx xxx xx xx</string>
    <string name="user_sign_up_form_nick">User name</string>
    <string name="user_sign_up_form_email">E-mail address</string>
    <string name="user_sign_up_form_password">Password</string>
    <string name="user_sign_up_form_re_password">Re password</string>
    <string name="user_sign_up_form_accept">I read and accept</string>
    <string name="user_sign_up_form_btn_sign_up">SIGN UP !</string>
    <string name="user_sign_up_form_success">Successful!</string>
    <string name="user_sign_up_form_dialog_loading">Trying to login...</string>
    <string name="user_menu_friend">My Friends</string>
    <string name="user_menu_inbox">Inbox</string>
    <string name="user_menu_change_password">Change my password</string>
    <string name="user_menu_update_profile">Update my profile</string>
    <string name="user_menu_exit">Exit</string>
    <string name="user_profile_update_title">Update your profile</string>
    <string name="user_profile_update_form_password">Password</string>
    <string name="user_profile_update_form_bt_update">Update</string>
    <string name="user_profile_update_btn_backto">Back to Profile</string>
    <string name="error_user_login_form_error">Session problem!</string>
    <string name="error_user_login_form_false">Username or password is not correct!</string>
    <string name="error_user_login_form_empty">Username or password cannot be empty!</string>
    <string name="error_user_login_form_suspended">Your account has been suspended. Please contact us</string>
    <string name="error_user_sign_up_form_empty">Please fill in all fields</string>
    <string name="error_user_sign_up_form_token_nick">This username is already in use please try another one</string>
    <string name="error_user_sign_up_form_token_email">This email address is already in use please try another one</string>
    <string name="error_user_sign_up_form_invalid_email">Your email address is invalid. Please enter a valid address</string>
    <string name="error_user_sign_up_form_invalid_nick">Your nick name is invalid. Please enter a valid nick name</string>
    <string name="error_user_sign_up_form_invalid_match_pw">Your Passswords do not match</string>
    <string name="error_user_sign_up_closed">Member registration is closed now try again later </string>
    <string name="error_user_sign_up_unknow">Registration progres coul not complated try again later</string>
    <string name="error_user_sign_up_false">your password or username/email is not correct!</string>
    <string name="message_welcome">Welcome</string>
    <string name="progress_user_login_trying">Please wait to login...</string>
    <string name="progress_title_user_login_trying">Login...</string>
    <string name="title_activity_loged">loged</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_ınbox_list">Items</string>
    <string name="title_ınbox_detail">Inbox Detail</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
</resources>