<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   >
    <ScrollView
        android:background="@drawable/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="564dp"

            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:textColor="@color/whitesmoke"
                android:textSize="20pt"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="Sign up "
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup_form_title" />

            <EditText style="@style/form_input_text_default"

                android:id="@+id/formnick"
                android:layout_width="match_parent"

                android:ems="10"
                android:hint="@string/user_sign_up_form_nick"
                android:inputType="textPersonName"

                />
            <EditText  style="@style/form_input_text_default"

                android:id="@+id/Sign_up_Name"
                android:layout_width="match_parent"

                android:hint="@string/user_sign_up_form_name"
                android:inputType="textPersonName"
                />
            <EditText
                style="@style/form_input_text_default"
                android:id="@+id/Sign_up_Surname"
                android:layout_width="match_parent"

                android:hint="@string/user_sign_up_form_surname"
                android:inputType="textPersonName"
           />
            <EditText
                style="@style/form_input_text_default"
                android:id="@+id/Sign_up_Email"
                android:layout_width="match_parent"

                android:hint="@string/user_sign_up_form_email"
                android:inputType="textPersonName"
             />
            <EditText

                android:id="@+id/Sign_up_Password"
                android:layout_width="match_parent"

                android:hint="@string/user_sign_up_form_password"
                android:inputType="textWebPassword"
                style="@style/form_input_text_default"  />
            <EditText
                style="@style/form_input_text_default"
                android:id="@+id/Sign_up_RePassword"
                android:layout_width="match_parent"

                android:hint="@string/user_sign_up_form_re_password"
                android:inputType="textWebPassword"
            />




            <EditText
                style="@style/form_input_text_default"
                android:layout_width="match_parent"

                android:inputType="phone"

                android:hint="@string/user_sign_up_form_phone"
                android:id="@+id/Phone"
                  />

            <Button
                style="@style/form_button_default"
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"

                android:text="Sign up" />


            <Button
                style="@style/form_button_default"
                android:text="@string/user_login_form_btn_login"
                android:layout_width="match_parent"

                android:id="@+id/LoginBTN" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>