<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="564dp"

        android:orientation="vertical"
        android:weightSum="1"
        android:id="@+id/lnlayout">


        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView2"
            android:layout_height="200dp" />

        <EditText

            style="@style/Login_Form_input_user"
            android:layout_width="match_parent"
            android:id="@+id/NICK"/>


        <EditText style="@style/Login_Form_input_pw"

            android:layout_width="match_parent"

            android:id="@+id/PASSWORD" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/user_login_form_iforgot"
                android:textColor="@color/darkred"
                android:paddingRight="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/iForgotlbl"
                android:layout_alignBaseline="@+id/rememberme"
                android:layout_alignBottom="@+id/rememberme"
                android:layout_toRightOf="@+id/rememberme"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" />

            <CheckBox
                android:checked="true"
                android:text="@string/user_login_form_remember"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:textColor="@color/darkred"
                android:id="@+id/rememberme"
                android:layout_marginStart="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>


        <Button
            android:padding="3dp"
            android:textColor="@color/darkred"
            android:background="@color/transparent_white_hex_10"
            android:id="@+id/LOGINBNT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.01"
            android:layout_marginBottom="2px"
            android:text="@string/user_login_form_btn_login"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/darkgreen"
                android:textSize="20dp"
                android:text="OR"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <Button

            android:padding="3dp"
            android:textColor="@color/darkred"
            android:background="@color/transparent_white_hex_10"
            android:layout_weight="0.01"
            android:text="@string/user_sign_up_form_btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:id="@+id/buttonsgnup"
            />


    </LinearLayout>

</ScrollView>